--- a/views/index.erb
+++ b/views/index.erb
@@ -1,12 +1,23 @@
 <h2>Museum Tracker</h2>
-<form action="/results">
+
+<br>
+<h3>Here are your current Museums:</h3>
+<br>
+<h4>Click on a Museum to edit it or view it's contents</h4>
+<ul>
+
+  <% @museums.each do |museum| %>
+  <li><a href="/museums/<%= museum.id %>"><%= museum.name %><a/></li>
+  <% end %>
+</ul>
+
+<br>
+
+
+<form action="/" method="post">
   <div class="form-group">
-    <label for ="string_one">Your </label>
-    <input id="string_one" name="string_one" class="form-control" type="text">
+    <label for ="name">Add a Museum to the List</label>
+    <input id="name" name="name" class="form-control" type="text" required="true">
   </div>
-  <div class="form-group">
-    <label for="string_two">Your </label>
-    <input id="string_two" name="string_two" class="form-control" type="text">
-    </div>
   <button type="submit" class="btn-success">Send</button>
 </form>
