--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,6 +3,8 @@
   <head>
     <title>Museum Tracker</title>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
+    <link rel='stylesheet' href='/css/styles.css'>
+
   </head>
   <body>
     <div class="container">
