--- a/views/museum.erb
+++ b/views/museum.erb
@@ -1,25 +1,19 @@
 <h2>Here are the Artworks for: <%= @museum.name %></h2>
 <br>
   <ul>
-   <% @museum.artworks.each do |art| %>
-    <li> <%= art.description %> <form action='/museums/:id' method='post'>
-      <input name='_method' type='hidden' value='delete'>
-      <input id='art' name='art' type='hidden' value='<%= @art.id %>'>
-
-      <button type="submit" class='btn btn-danger'>Delete this Artwork</button>
-    </form></li>
-
-    <% end %>
+   <% @museum.artworks.each do |artwork| %>
+    <li><a href="/artworks/<%= artwork.id %>"><%= artwork.description %></a></li>
+   <% end %>
   </ul>
 <br>
-<form action='/museums/:id' method='post'>
+<form action='/museums/<%= @museum.id %>' method='post'>
 
-  <input id='museum_id' name='museum_id' type='hidden' value='<%= @museum.id %>'>
-
+  <input id='id' name='id' type='hidden' value='<%= @museum.id %>'>
+ 
   <label for='description'>Add Artwork to this Museum</label>
 
   <input id = 'description' name='description' type='text' required="true">
-  <button type='submit' class='btn btn-info'>Add</button>
+  <button type='submit' class='btn-success'>Add</button>
 
 
 </form>
@@ -27,13 +21,13 @@
 <div class="form-group">
 
 
-    <form action='/museums/ <%= @museum.id %>' method='post'>
+    <form action='/museums/<%= @museum.id %>' method='post'>
       <input name='_method' type='hidden' value='patch'>
 
       <label for='name'> Rename Your Museum:</label>
       <input id='name' name='name' type='text' required="true">
 
-      <button type='submit' class='btn btn-info'> Update </button>
+      <button type='submit' class='btn-success'> Update </button>
 
     </form>
 </div
